2012-08-03  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, rolling out r124614.
        http://trac.webkit.org/changeset/124614
        https://bugs.webkit.org/show_bug.cgi?id=91727

        gstreamer core .po files mess up the build again

        * platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
        (WTF::adoptGRef):
        * platform/graphics/gstreamer/GStreamerVersioning.cpp:
        (setGstElementClassMetadata):
        * platform/graphics/gstreamer/GStreamerVersioning.h:
        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (StreamingClient::didReceiveResponse):

2012-08-03  Benjamin Poulain  <bpoulain@apple.com>

        Initialize the Event Names' string from read only memory
        https://bugs.webkit.org/show_bug.cgi?id=92435

        Reviewed by Anders Carlsson.

        Similarily to r123689, we can initialize the event names' string from memory without copying the data.
        This saves us memory and initialization time.

        * dom/EventNames.cpp:
        (WebCore):

2012-08-03  Philippe Normand  <pnormand@igalia.com>

        [GTK][jhbuild] Switch to GStreamer 0.11 build
        https://bugs.webkit.org/show_bug.cgi?id=91727

        Reviewed by Gustavo Noronha Silva.

        Add a new function to encapsulate the GStreamer API removal of
        GST_OBJECT_IS_FLOATING in the upcoming 1.0 release. Use of this
        macro can now be replaced by calling the g_object_is_floating
        function.

        * platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
        (WTF::adoptGRef):
        * platform/graphics/gstreamer/GStreamerVersioning.cpp:
        (gstObjectIsFloating):
        * platform/graphics/gstreamer/GStreamerVersioning.h:

2012-08-03  George Staikos  <staikos@webkit.org>

        [BlackBerry] Add a null check for media implementation to fix a crash.
        https://bugs.webkit.org/show_bug.cgi?id=93107

        Reviewed by Rob Buis.

        Fixes media/video-size.html.
