@@ -1,3 +1,12 @@
+2012-08-03  Alexander Pavlov  <apavlov@chromium.org>
+
+        Unreviewed, restore Web Inspector JS frontend compilability after r124484 (fix JSDoc annotations).
+
+        * inspector/front-end/Settings.js:
+        * inspector/front-end/SettingsScreen.js:
+        * inspector/front-end/UserAgentSupport.js:
+        (WebInspector.UserAgentSupport.DeviceOrientation):
+
 2012-08-03  Philippe Normand  <pnormand@igalia.com>
 
         Unreviewed, rolling out r124614.
